photo select process done. store adding done.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,6 +15,15 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:listitem="@layout/store_list_item" />
 
+
+    <Button
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:id="@+id/btnAddStore"
+        android:layout_margin="10dp"
+        android:text="Add Store"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
     <ProgressBar
         android:id="@+id/progressBar"
         android:layout_width="wrap_content"
